# flow

./: .env.example  .gitignore  AUDIO_BACKGROUND_README.md  AUDIO_DUAL_CAPTURE_SUMMARY.md  AUDIO_RECORDER_README.md  AUDIO_SEARCH_FIX.md  AUDIO_SETUP_COMPLETE.md  AUDIO_SETUP_GUIDE.md  CHROMA_CONNECTION_FIX.md  CHROMA_SEGFAULT_FIX.md  DEPLOYMENT_SUMMARY.md  DESKTOP_README.md  GITHUB_LINK_FIX.md  GITHUB_LINK_UPDATED.md  INSTALLATION.md  LICENSE  MARKDOWN_ONLY_PAGES_UPDATE.md  MARKDOWN_PAGES_SUMMARY.md  MCP_DATA_TYPE_FILTER_UPDATE.md  README.md  README_RESTRUCTURE_SUMMARY.md  TROUBLESHOOTING.md  WEBSITE_BUILDER_README_UPDATE.md  WORKTREE-TO-MAIN.md  adding-person-speaking-info.md  additional-work-items.md  audio_background_recorder.py  audio_recorder.py  audio_requirements.txt  browse_collections.py  chroma-track-cjs.js  chroma-track.js  chroma-vector-store.js  cleanup.md  cli-for-memex.md  code-comprehension.md  com.memex.standup.plist  demo.md  hamster_pixel_art.md  index.html  (+17 more)
chroma/: chroma-requirements.txt  chroma.sqlite3
cli/: __init__.py  __main__.py  main.py  requirements.txt
dashboard/: app.py  requirements.txt  test_hamster_states.py
desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
docs/: BLOG_POST.md  DECENTRALIZED_ARCHITECTURE.md  SECURITY_MODEL.md  WORKTREE_GUIDE.md  current-architecture.md  do-i-need-to-build-automations.md  does-this-run-on-ethereum.md  hosting-options.md  ideas-for-automations.md  memex-for-contracting.md  team-memex-architecture.md
flow/: run.py
mcp-flow/: flow-mcp-requirements.txt  flow_mcp_server.py
mcp-flow-node/: .flow-state.json  DEBUG_GUIDE.md  debug-logs.sh  package.json  server.js  start-with-logging.sh  view-logs.sh
mcp-server/: README.md  http_server.py  multi_instance_client.py  pyproject.toml  requirements.txt  server.py  start.sh
mcp-server/tools/: __init__.py  activity.py  daily_summary.py  recent_search.py  sampling.py  search.py  stats.py  system.py  vector_search.py  website.py
recorder/: Package.swift
(+160 files in other folders)
