[project]
name = "flow-mcp-server"
version = "1.0.0"
description = "Flow MCP Server - Python implementation for screen capture OCR search and system management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.22",
    "httpx>=0.26.0",
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "asyncio-mqtt>=0.16.2",
    "orjson>=3.9.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
